package com.matriculas.matriculas.Enums;

public enum Role {
    ADMINISTRADOR,
    PROFESSOR,
    ALUNO;
}
