package com.matriculas.matriculas.Enums;

public enum StatusDisciplina {
    DISPONIVEL,
    CANCELADA,
    INDISPONIVEL,
    FINALIZADA;

}
