package com.matriculas.matriculas.Enums;

public enum TipoDisciplina {
    OBRIGATORIA,
    OPTATIVA;
}
