package com.matriculas.matriculas.Models;

public class SistemaCobranca {

    public static void registrarCobranca(Matricula matricula) {
        //TODO: Implementacao
    }
    public static void cancelarCobrancaParaTurma(Turma turma){
        //TODO: Implementacao
    }

}
